@@ -13,11 +13,11 @@ not run its Makefile.PL or Build.PL.
 
 -----BEGIN PGP SIGNED MESSAGE-----
 
-SHA1 a961a7c2a2620deb9b6b328ef9fd3fba9543bfd5 CHANGES
+SHA1 0c9fe2f35f7f2a553f85be372520478b47924f9f CHANGES
 SHA1 f8f8adfbed9a5c888c9e0190283086803a6c6f48 INSTALL
 SHA1 02154445bc9831e791c35050f1a018ed99030016 LICENSE
 SHA1 647e5b16c002f67d77ad23580eff098c8971de4d MANIFEST
-SHA1 81652a9a7cb05ea066f9343ddef061303999cbe2 META.yml
+SHA1 601be4b63fdc8e325a6ee30f4bddda70d3682569 META.yml
 SHA1 55d900254be9413061e51b33854d12d9d5bd0db7 Makefile.PL
 SHA1 890aafcf13518eddec7a2afa0646c0fff3f1f16f README
 SHA1 9f8bf169a8a4088f8e43f6ddcdf7e4554461fbac TODO
@@ -37,7 +37,7 @@ SHA1 af429a1f4f4ae0b680c1be404a9043a519c4320e examples/html.pl
 SHA1 023f57e1fae5eef557052c7848c247358b39435c examples/parse
 SHA1 caf611d316df7c733306bccc5fe9e3b6aeeb30a1 examples/syntax.pl
 SHA1 ba5975d13cc801c8ce378247d8244ca63273b06f examples/syntax.tpl
-SHA1 bf1ccefa03e4247662c4640e1dd1183ad31829a2 lib/Graph/Easy.pm
+SHA1 2d960616da765b5c4cb1d9a41e96c2ef47a4e908 lib/Graph/Easy.pm
 SHA1 e11cf23802403d6af955d590b96429883f2f3d2b lib/Graph/Easy/As_ascii.pm
 SHA1 36601db8c9ee5049e8a78eb6ac9910d0ee1f3330 lib/Graph/Easy/As_graphviz.pm
 SHA1 60cbc43b080e2e23735c6f40b4fc8584c1d28046 lib/Graph/Easy/As_txt.pm
@@ -55,12 +55,12 @@ SHA1 226baa21363c0985a23ee3e5c807d06769ca5c91 lib/Graph/Easy/Node/Cell.pm
 SHA1 ca895aa4a8bb7910fd211b58a9e20812e3cb97cf lib/Graph/Easy/Node/Empty.pm
 SHA1 f8da0001f7d8fce1d91b68c3f925340aade85256 lib/Graph/Easy/Parser.pm
 SHA1 28e5ae199493fae48ca0639dcb372ca9dca7f359 t/anon.t
-SHA1 0f6b7c7cd296d1aaece286e7a7e9a1a82e70489d t/ascii.t
+SHA1 cfc5fee869361d83430eaea279d4e1e64d73de69 t/ascii.t
 SHA1 37e2ac1d493afc0b5b0c7beaa03c69c5c7661c56 t/astar.t
 SHA1 d1e23eedfd461ae602b9a402470718694f8f595e t/attributes.t
 SHA1 f496316ebb24adc47cb08ab4cbcd8ffa1b02a5b8 t/cell.t
 SHA1 fd7c66cf6ce6666cf87e47ac2c38c2c5df0df22a t/cluster.t
-SHA1 6977d2dfa95835b3549b7b2400190c58808ea200 t/easypm.t
+SHA1 2908449a654edd354541381837f40a6d6c10081f t/easypm.t
 SHA1 f7ae1d0ae518d1740cc390fdc263069b32e6a9ed t/edge.t
 SHA1 c7b42c7ceef97e8581af245e778fadbb2e9b141a t/edge_cell.t
 SHA1 37b4cf975db33ac227fd7728daa81581237beda8 t/fb.t
@@ -186,8 +186,8 @@ SHA1 7309fc1c1a1be391257037ee5818497ef59c77cc t/parse_att.t
 SHA1 07c7e99c79d357df47584168701aca998f91dcb1 t/parse_edge.t
 SHA1 c7ed31704a12abdb3ac957ac1d8a540b27b0a716 t/parser.t
 SHA1 ed91c8ac021d2639847fce6a872f65c57aee2296 t/path.t
-SHA1 05c5f0b7a55041244eafb028f768bc40e88c18a1 t/pod.t
-SHA1 0a1440ba3454cbcaeb6da843c46caa6a75d6588b t/pod_cov.t
+SHA1 e2d2ae0b36ac2609f387b7176422f5adac22956b t/pod.t
+SHA1 d3e60d5c7a2d2e2247b1eeaf450682a693cb7149 t/pod_cov.t
 SHA1 f6990c596ab7633ecd89bbc6b19624372d5ed3b3 t/split.t
 SHA1 0c2dca34d65dad0a5e9ad902cb213fa416048d4d t/stress/0001.txt
 SHA1 2a211ff334d644ade83f11fb820f2f0f474830c1 t/stress/0002.txt
@@ -276,11 +276,11 @@ SHA1 ecc3cf6fd0993b06e18d44c5005605304752166e todos/layouter_loop_2.txt
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.2.4 (GNU/Linux)
 
-iQEVAwUBQy2xNncLPEOTuEwVAQF1Ngf/UO/V9RQXzgkfkL0LUpBXXrgiIzD8Bq+3
-opVkmguX3y3ZOxYf5G8wc5eaFqU1pZpJl0DT+iBBa6Da2OwAZlA0lq1YTHy8vqIQ
-xdq6OeWl9b9WRCcLdV8hqaIv4FDjlqq/n8ESXN68shX+t71uAb8YtMYLeSVFxDcO
-gF6MAH014ioCnpHw6TTwo/1kbsS40eAMJyUeD0gMOnLU6IaQPXLV+cXu80L5AR7v
-ii4xRga4R4p6xgINLGHZl0pnCAWzh6n7xk0Tub5RMKNot1ecRXWC6on+7uJd2Q14
-2ZJPTyfs31F+eXGI/rDSRgWm4oIDt9PbRkAGNsqwTVU7YRpj1HHPqw==
-=9+/l
+iQEVAwUBQzQdH3cLPEOTuEwVAQG48Qf7BGLpHUoAkhtcPsVF1b96yRephReMjgDZ
+D+4jbo4FAkt3D3SYrJh3X7uvwT2XDqu2u5Ezg94WdY8unizATir5Odyp8ze7xE/y
+VdZUJFvGhk7yvUvo8hTvY0yv6ConaV9SDwF/O/QWidO4X1n43So9MGEWoceHxIQ8
+f+pfapYWmqC98MDr83g0tsjvl0+NeAKD/ow/VgKdgZhgLmftdVwTzgdtN05qAt/a
+aTO15V7sBlTuue0h0G7HpyjUoFxYL7knXmOU9RrWC9D3Udy9NNhxbCk9td3RK2JC
+TcF0bRfSCMGaar2OCHXFOJyKV213dwskHyISNmFJcgZq078RpVQACg==
+=JUGh
 -----END PGP SIGNATURE-----
