@@ -3,9 +3,12 @@
 use Test::More;
 use strict;
 
+my $tests;
+
 BEGIN
    {
-   plan tests => 5;
+   $tests = 5;
+   plan tests => $tests;
    chdir 't' if -d 't';
    use lib '../lib';
    };
@@ -13,7 +16,7 @@ BEGIN
 
 SKIP:
   {
-  skip("Test::Pod::Coverage 1.00 required for testing POD coverage", 1)
+  skip("Test::Pod::Coverage 1.00 required for testing POD coverage", $tests)
     unless do {
     eval "use Test::Pod::Coverage 1.00";
     $@ ? 0 : 1;
